force-app/main/default/objects/CRMforNonProfit__Fio_Bank_Account__c/CRMforNonProfit__Fio_Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Fio Bank Account</label>
    <nameField>
        <label>Fio Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fio Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>