force-app/main/default/objects/CRMforNonProfit__Fio_Bank_Account__c/fields/CRMforNonProfit__Balance__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>