force-app/main/default/objects/CRMforNonProfit__Fio_Bank_Account__c/fields/CRMforNonProfit__Currency__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Currency__c</fullName>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>