force-app/main/default/objects/CRMforNonProfit__Fio_Bank_Account__c/fields/CRMforNonProfit__IBAN__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__IBAN__c</fullName>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>