force-app/main/default/objects/CRMforNonProfit__Fio_Bank_Account__c/fields/CRMforNonProfit__Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Last_Sync__c</fullName>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>