force-app/main/default/objects/CRMforNonProfit__Fio_Bank_Account__c/fields/CRMforNonProfit__Sync_From__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Sync_From__c</fullName>
    <label>Sync From</label>
    <type>Date</type>
</CustomField>